--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
             <button onclick="showSection('video')">🤐</button>
         </div>
     </div>
-
     <!-- Video Section -->
     <div id="video" class="section">
-        <video controls autoplay muted>
-            <source src="360p-watermark.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <img src="qr.png" alt="qr">
+        <h1>Thanks for looking at my website, Scan the QR to see the source code.</h1>
     </div>
 
     <!-- Students Section -->
