--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
     <div id="video" class="section">
         <img src="qr.png" alt="qr">
         <h1>Thanks for looking at my website, Scan the QR to see the source code.</h1>
+        <a href="https://commons.wikimedia.org/wiki/File:Rickrolling_QR_code.png">
+            <h2>Source of Qr code</h2>
+        </a>
     </div>
 
     <!-- Students Section -->
